# nextbook

./: CLAUDE.md  README.md  fix-chapter.js  fix-chapter2.js  fix-prompts.js  package.json  pnpm-lock.yaml  switch-config.js
.claude/: settings.json
.claude/rules/: ai-elements.md  nextjs.md  project-conventions.md  shadcn-ui.md  tailwind-v4.md  tauri.md
.zed/: tasks.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout-client.tsx  layout.tsx  page.tsx  scrollbar.css  sitemap.ts
src/app/about/: page.tsx
src/app/help/: page.tsx
src/app/projects/: page.tsx
src/app/projects/[id]/: client.tsx  page.tsx
src/app/settings/: page.tsx
src/app/storage/: page.tsx
src/app/tools/: page.tsx
src/components/: ai-chat-panel.tsx  app-nav.tsx  app-sidebar.tsx  aurora-background.tsx  background-beams.tsx  decorative-globe.tsx  markdown.tsx  mobile-nav.tsx  particles.tsx  theme-provider.tsx  theme-toggle.tsx  toast-provider.tsx
src/components/ai-elements/: plan.tsx  prompt-input.tsx  voice-selector.tsx
src/components/ui/: collapsible.tsx  dropdown-menu.tsx  hover-card.tsx  select.tsx  spinner.tsx
src/lib/: ai-service.ts  ai-stream.ts  chapter-ai.ts  i18n.tsx  pdf-service.ts  storage.ts  study-data-server.ts  study-data.ts  task-callbacks.ts
