[package]
name = "nextbook"
version = "0.1.0"
description = "NextBook - An application to help people study and review subjects with their own materials"
authors = ["NextBook Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nextbook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
